<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:background="#ff3c3c42" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/pi_memfill_title" />
        <TextView android:textSize="17.0sp" android:textColor="#ff9398a6" android:gravity="center" android:layout_gravity="left|center" android:id="@id/back_gt" android:background="@drawable/a_gt_inparam_top" android:layout_width="76.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:text="@string/back" />
    </FrameLayout>
    <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pi_memfill_alloc" />
    <EditText android:textColor="#ffffffff" android:id="@id/et_num" android:background="@drawable/tcpdump_border" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:hint="@string/pi_memfill_hint" android:digits="\ 1234567890" />
    <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:id="@id/tv_net_switch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:text="@string/pi_memfill_btn" />
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/net_switch" android:background="@drawable/switch_on_border" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/pi_memfill_on" />
    <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/desc" />
    <TextView android:textSize="14.0sp" android:textColor="@drawable/text_title_gray" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/memfill_desc" />
</LinearLayout>