<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:background="#ff3c3c42" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/pi_battery_title" />
        <TextView android:textSize="17.0sp" android:textColor="#ff9398a6" android:gravity="center" android:layout_gravity="left|center" android:id="@id/battery_back_gt" android:background="@drawable/a_gt_inparam_top" android:layout_width="76.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:text="@string/back" />
    </FrameLayout>
    <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pi_battery_sample_rate" />
    <EditText android:textColor="#ffffffff" android:id="@id/et_refresh_rate" android:background="@drawable/tcpdump_border" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:hint="@string/pi_battery_sample_hint" android:maxLength="6" android:digits="\ 1234567890" />
    <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pi_battery_select_items" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:layout_marginRight="9.0dip" android:layout_marginBottom="6.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@drawable/text_title_gray" android:gravity="center" android:id="@id/tv_I" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/pi_battery_i" android:singleLine="true" android:layout_weight="1.0" />
        <CheckBox android:id="@id/cb_I" android:focusable="false" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="18.0sp" android:textColor="@drawable/text_title_gray" android:gravity="center" android:id="@id/tv_U" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/pi_battery_u" android:singleLine="true" android:layout_weight="1.0" />
        <CheckBox android:id="@id/cb_U" android:focusable="false" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:layout_marginRight="9.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@drawable/text_title_gray" android:gravity="center" android:id="@id/tv_Power" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/pi_battery_power" android:singleLine="true" android:layout_weight="1.0" />
        <CheckBox android:id="@id/cb_Power" android:focusable="false" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="18.0sp" android:textColor="@drawable/text_title_gray" android:gravity="center" android:id="@id/tv_Temp" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/pi_battery_temp" android:singleLine="true" android:layout_weight="1.0" />
        <CheckBox android:id="@id/cb_Temp" android:focusable="false" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pi_battery_setbrightness" />
    <EditText android:textColor="#ffffffff" android:id="@id/et_brightness" android:background="@drawable/tcpdump_border" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:hint="[0-255]" android:maxLength="3" android:digits="\ 1234567890" />
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/sample_switch" android:background="@drawable/switch_on_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/start" />
    <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/desc" />
    <TextView android:textSize="14.0sp" android:textColor="@drawable/text_title_gray" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_desc" />
</LinearLayout>