<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:background="#ff3c3c42" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/pi_gps_title" />
        <TextView android:textSize="17.0sp" android:textColor="#ff9398a6" android:gravity="center" android:layout_gravity="left|center" android:id="@id/frame_back_gt" android:background="@drawable/a_gt_inparam_top" android:layout_width="76.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:text="@string/back" />
    </FrameLayout>
    <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:layout_gravity="center" android:id="@id/gpsreplayname" android:paddingTop="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <SeekBar android:id="@id/seekBar_percent" android:paddingTop="25.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" />
    <TextView android:textSize="14.0sp" android:textColor="@drawable/text_title_gray" android:layout_gravity="center" android:id="@id/percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-%" />
    <RadioGroup android:id="@id/radioGroup_replyspeed" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:id="@id/radio_replayspeed_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/gps_replayspeed_normal" />
        <RadioButton android:id="@id/radio_replayspeed_double" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gps_replayspeed_double" />
        <RadioButton android:id="@id/radio_replayspeed_treble" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gps_replayspeed_treble" />
    </RadioGroup>
    <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/desc" />
    <TextView android:textSize="14.0sp" android:textColor="@drawable/text_title_gray" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gps_replay_desc" />
    <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/frame_save_gt" android:layout_width="76.0dip" android:layout_height="40.0dip" android:layout_marginTop="18.0dip" android:layout_marginBottom="10.0dip" android:text="@string/save" />
</LinearLayout>