<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:background="#ff3c3c42" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/pi_octopus_title" />
            <TextView android:textSize="17.0sp" android:textColor="#ff9398a6" android:gravity="center" android:layout_gravity="left|center" android:id="@id/back_gt" android:background="@drawable/a_gt_inparam_top" android:layout_width="76.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:text="@string/back" />
        </FrameLayout>
        <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pi_octopus_product_name" />
        <Spinner android:textColor="#ffffffff" android:id="@id/sp_product_name" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:hint="@string/pi_octopus_product_hint" android:singleLine="true" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/upload_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/upload" />
        </LinearLayout>
        <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/desc" />
        <TextView android:textSize="14.0sp" android:textColor="@drawable/text_title_gray" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/octopus_desc" />
    </LinearLayout>
</ScrollView>