<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:background="#ff3c3c42" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/pi_othersm_title" />
        <TextView android:textSize="17.0sp" android:textColor="#ff9398a6" android:gravity="center" android:layout_gravity="left|center" android:id="@id/back_gt" android:background="@drawable/a_gt_inparam_top" android:layout_width="76.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:text="@string/back" />
    </FrameLayout>
    <TextView android:textSize="14.0sp" android:id="@id/textviewInformation" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_gravity="center_horizontal" android:id="@id/buttonCheckStatus" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pi_othersm_check_status_btn" android:layout_weight="1.0" />
        <Button android:layout_gravity="center_horizontal" android:id="@id/buttonWriteProperty" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pi_othersm_write_property_btn" android:layout_weight="1.0" />
        <Button android:layout_gravity="center_horizontal" android:id="@id/buttonRecoverProperty" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pi_othersm_recover_property_btn" android:layout_weight="1.0" />
        <Button android:layout_gravity="center_horizontal" android:id="@id/buttonRestart" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pi_othersm_restart_btn" android:layout_weight="1.0" />
    </LinearLayout>
    <ListView android:id="@id/listViewOtherSM" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/sample_switch" android:background="@drawable/switch_on_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" />
    <TextView android:textSize="18.0sp" android:textColor="#ffb7bdcf" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/desc" />
    <TextView android:textSize="14.0sp" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/othersm_desc" />
</LinearLayout>